--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc greeter.ts",
     "pretest": "tsc",
-    "test": "alsatian ./specs/spec.js"
+    "test": "alsatian ./dist/specs/greeter.spec.js"
   },
   "devDependencies": {
     "alsatian": "^1.3.1",
