--- a/package.json
+++ b/package.json
@@ -5,11 +5,23 @@
   "license": "MIT",
   "scripts": {
     "start": "tsc greeter.ts",
-    "pretest": "tsc",
-    "test": "alsatian ./dist/specs/greeter.spec.js"
+    "test": "jest"
   },
   "devDependencies": {
-    "alsatian": "^1.3.1",
+    "@types/jest": "^19.2.2",
+    "jest": "^19.0.2",
+    "ts-jest": "^19.0.8",
     "typescript": "^2.2.2"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
