--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^19.2.2",
     "jest": "^19.0.2",
     "ts-jest": "^19.0.8",
+    "tslint": "^5.1.0",
     "typescript": "^2.2.2"
   },
   "jest": {
